# AsuScheduleBot

./: .gitignore  LICENSE  Pipfile  README.md  bot.py  bot_database.db  config.py  entrypoint.sh  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 2687422caf04_make_user_id_in_stats_big_integer.py  2cff9b180833_add_users_table.py  42c94d3cee9f_add_faculties_table.py  51773d63ecb2_add_technical_cards_link_to_groups.py  6beea1ced756_add_notes_table.py  b137fcd02bd9_create_groups_lecturers_group_schedules_.py  be484e4c9d87_make_user_id_to_be_long.py  f27b3aa40634_make_saved_group_lecturer_nullable.py
asu/: __init__.py  api.py  formatting.py  group.py  lecturer.py  schedule.py  timetable.py
config/: __init__.py  database.py
database/: __init__.py  db.py  mariadb.py  models.py  searchtype.py
scripts/: migrate_to_mariadb.py
src/: bot.py
telegrambot/: bot.py  commandHandlers.py  commands.py  context.py  database.py
telegrambot/commands/: __init__.py  admin_command.py  card_command.py  cleansavedgroup_command.py  cleansavedlecturer_command.py  common.py  lecturer_command.py  note_command.py  notes_command.py  report_command.py  schedule_command.py  start_command.py  stats_command.py
telegrambot/common/: decorator.py
telegrambot/data/: techcards.json
utils/: daterange.py  latin_to_ru.py  monitoring.py  sub_format.py
